--- a/app/assets/stylesheets/devise/_devise.scss
+++ b/app/assets/stylesheets/devise/_devise.scss
@@ -5,8 +5,9 @@ $devise-black: #000;
 $devise-primary: #333;
 
 .devise {
+  padding: 30px 0;
   font-family: 'Open Sans', sans-serif;
-  font-size: .9em;
+  font-size: 1em;
   text-align: center;
 }
 
@@ -23,17 +24,8 @@ $devise-primary: #333;
 
 
 .devise-logo {
-  margin: 0;
+  margin: 0 0 20px;
 }
-
-.devise-title {
-  color: $devise-primary;
-  font-size: 1.1em;
-  text-align: center;
-
-  margin: 0 0 15px;
-}
-
 
 .devise-field {
   margin-bottom: 20px;
@@ -73,18 +65,19 @@ $devise-primary: #333;
 
 .devise-checkbox {
   position: relative;
+  display: flex;
+  align-items: center;
+  height: 40px;
 
   input {
-    position: absolute;
-    top: 4px;
-    left: 0;
+    margin-top: 2px;
   }
 
   label {
     cursor: pointer;
     display: block;
     color: lighten($devise-black, 40%);
-    padding-left: 20px;
+    padding-left: 8px;
   }
 }
 
@@ -129,32 +122,16 @@ $devise-primary: #333;
   }
 }
 
-.devise-links {
-  padding-top: 20px;
-
-  a {    
-    font-size: .95em;
-    text-decoration: none;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
+.devise-copy {
+  margin-top: 20px;
+  font-size: .9em;
 }
 
 
 @media screen and (min-width: 360px) {
-  .devise-body {
-    font-size: .96em;
-  }
-
   .devise-content {
-    width: 320px;
+    width: 330px;
     margin: 0 auto;
-  }
-
-  .devise-logo {
-    margin: 30px 0 0;
   }
 
   .devise-col {
